--- a/projects/templates/projects_list.html
+++ b/projects/templates/projects_list.html
@@ -1,21 +1,32 @@
 {% extends 'base.html' %}
 
+{% block title %}
+Проекти
+{% endblock %}
+
 {% block content %}
 
-    {% if objects %}
-		{% for obj in objects %}
-			<article class="row">
-				<p class="text">{{ obj.name }}</p>
-				<p class="text">{{ obj.description | linebreaks }}</p>
-				<p class="text">{{ obj.deadline }}</p>
-				<p class="text">{{ obj.customer }}</p>
-				<p class="text">{{ obj.repo_url }}</p>
-				<a href="{% url 'projects_detail' obj.id %}">Детальніше</a>
-			</article>
+{% if objects %}
+{% for obj in objects %}
+<article class="row">
+	<div class="panel panel-primary">
+		<div class="panel-heading">
+			<h3 class="panel-title">{{ obj.name }}</h3>
+		</div>
+		<div class="panel-body">
+			<p class="text">Клієнт: {{ obj.customer }}</p>
+			<p class="text">Дедлайн: {{ obj.deadline }}</p>
+			<p class="text">Репозиторій: {{ obj.repo_url }}</p>
 			<hr>
-    	{% endfor %}
-    {% else %}
-		<p class="text">No projects.</p>
-	{% endif %}
+			<p class="text">{{ obj.description | linebreaks }}</p>
+			<a href="{% url 'projects_detail' obj.id %}">Детальніше</a>
+		</div>
+	</div>
+</article>
+<hr>
+{% endfor %}
+{% else %}
+<p class="text">No projects.</p>
+{% endif %}
 
 {% endblock %}
