--- a/tickets/templates/ticket_detail.html
+++ b/tickets/templates/ticket_detail.html
@@ -30,7 +30,10 @@
 				<p class="text">Пріоритет: {{ object.priority }}</p>
 				<p class="text">Тип: {{ object.goal }}</p>
 				<p class="text">Статус: {{ object.status }}</p>
-				<p class="text">Власник: <a href="{% url 'profile' object.owner %}">{{ object.owner }}</a></p>
+				<p class="text">Бали: {{ object.points }}</p>
+				{% if object.owner %}
+					<p class="text">Власник: <a href="{% url 'profile' object.owner %}">{{ object.owner }}</a></p>
+				{% endif %}
 				<hr>
 				<p class="text">{{ object.description | linebreaks }}</p>
 			</div>
