--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -26,7 +26,7 @@
 		<h2 class="text">Проекти:</h2>
 		{% if projects %}
 		{% for p in projects %}
-			<a href="{% url 'projects_detail' p.id %}">{{ p.name }}</a>
+			<p class="text"><a href="{% url 'projects_detail' p.project.id %}">{{ p.project.name }}</a>: {{ p.earned }}</p>
 			<hr>
 		{% endfor %}
 		{% else %}
@@ -114,4 +114,46 @@
 	</div>
 </article>
 {% endif %}
+
+{% if closed_tickets %}
+<article class="tickets">
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Виконано:</h3>
+		</div>
+		<div class="panel panel-body">
+			<article class="row">
+				<table class="table table-hover table-striped">
+					<th class="row">
+						<td class="col-xs-6">
+							Name
+						</td>
+						<td class="col-xs-3">
+							Priority
+						</td>
+						<td class="col-xs-3">
+							Goal
+						</td>
+					</th>
+					{% for t in closed_tickets %}
+					<tr class="row">
+						<td class="col-xs-6">
+							<a href="{% url 'ticket_detail' t.id %}">{{ t.name }}</a>
+						</td>
+						<td class="col-xs-3">
+							{{ t.priority }}
+						</td>
+						<td class="col-xs-3">
+							{{ t.goal }}
+						</td>
+					</tr>
+					{% endfor %}
+				</table>
+			</article>
+		</div>
+	</div>
+</article>
+{% endif %}
+
+
 {% endblock %}
