added projects cost to temlates

--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -15,6 +15,7 @@
 			<p class="text">Клієнт: {{ object.customer }}</p>
 			<p class="text">Дедлайн: {{ object.deadline }}</p>
 			<p class="text">Репозиторій: {{ object.repo_url }}</p>
+			<p class="text">Вартість: {{ object.cost }}</p>
 			<hr>
 			<p class="text">{{ object.description | linebreaks }}</p>
 			<p class="text">Розробники:</p>
