added tickets' points to profile and project_detail templates

--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -44,11 +44,14 @@
 					<td class="col-xs-4">
 						Name
 					</td>
-					<td class="col-xs-2">
+					<td class="col-xs-1">
 						Priority
 					</td>
 					<td class="col-xs-2">
 						Goal
+					</td>
+					<td class="col-xs-1">
+						Points
 					</td>
 					<td class="col-xs-2">
 						Status
@@ -62,11 +65,14 @@
 					<td class="col-xs-4">
 						<a href="{% url 'ticket_detail' t.id %}">{{ t.name }}</a>
 					</td>
-					<td class="col-xs-2">
+					<td class="col-xs-1">
 						{{ t.priority }}
 					</td>
 					<td class="col-xs-2">
 						{{ t.goal }}
+					</td>
+					<td class="col-xs-1">
+						{{ t.points }}
 					</td>
 					<td class="col-xs-2">
 						{{ t.status }}
@@ -98,11 +104,14 @@
 					<td class="col-xs-4">
 						Name
 					</td>
-					<td class="col-xs-2">
+					<td class="col-xs-1">
 						Priority
 					</td>
 					<td class="col-xs-2">
 						Goal
+					</td>
+					<td class="col-xs-1">
+						Points
 					</td>
 					<td class="col-xs-2">
 						Status
@@ -116,11 +125,14 @@
 					<td class="col-xs-4">
 						<a href="{% url 'ticket_detail' t.id %}">{{ t.name }}</a>
 					</td>
-					<td class="col-xs-2">
+					<td class="col-xs-1">
 						{{ t.priority }}
 					</td>
 					<td class="col-xs-2">
 						{{ t.goal }}
+					</td>
+					<td class="col-xs-1">
+						{{ t.points }}
 					</td>
 					<td class="col-xs-2">
 						{{ t.status }}
@@ -152,11 +164,14 @@
 					<td class="col-xs-4">
 						Name
 					</td>
-					<td class="col-xs-3">
+					<td class="col-xs-2">
 						Priority
 					</td>
-					<td class="col-xs-3">
+					<td class="col-xs-2">
 						Goal
+					</td>
+					<td class="col-xs-2">
+						Points
 					</td>
 					<td class="col-xs-2">
 						Status
@@ -167,11 +182,14 @@
 					<td class="col-xs-4">
 						<a href="{% url 'ticket_detail' t.id %}">{{ t.name }}</a>
 					</td>
-					<td class="col-xs-3">
+					<td class="col-xs-2">
 						{{ t.priority }}
 					</td>
-					<td class="col-xs-3">
+					<td class="col-xs-2">
 						{{ t.goal }}
+					</td>
+					<td class="col-xs-2">
+						{{ t.points }}
 					</td>
 					<td class="col-xs-2">
 						{{ t.status }}
@@ -200,11 +218,14 @@
 					<td class="col-xs-4">
 						Name
 					</td>
-					<td class="col-xs-2">
+					<td class="col-xs-1">
 						Priority
 					</td>
 					<td class="col-xs-2">
 						Goal
+					</td>
+					<td class="col-xs-1">
+						Points
 					</td>
 					<td class="col-xs-2">
 						Status
@@ -218,11 +239,14 @@
 					<td class="col-xs-4">
 						<a href="{% url 'ticket_detail' t.id %}">{{ t.name }}</a>
 					</td>
-					<td class="col-xs-2">
+					<td class="col-xs-1">
 						{{ t.priority }}
 					</td>
 					<td class="col-xs-2">
 						{{ t.goal }}
+					</td>
+					<td class="col-xs-1">
+						{{ t.points }}
 					</td>
 					<td class="col-xs-2">
 						{{ t.status }}
