--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -12,7 +12,11 @@
 {% endblock %}
 
 {% block extra_head %}
-<link rel="stylesheet" href="{% static 'css/profile.css' %}">
+<style media="screen">
+#projects {
+	border-left: 1px solid;
+}
+</style>
 {% endblock %}
 
 {% block content %}
